test/expected/explain_cast_si.out
explain (static int)x
                ^
17: error: can not cast into static
